<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:hint="@string/username"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:layout_gravity="center_horizontal"
        android:minHeight="48dp"
        android:paddingVertical="12dp"
        android:hint="@string/password"
        android:textColor="@android:color/black"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:autofillHints="password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxWidth="400dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/tvGoToSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_signup"
        android:layout_gravity="center_horizontal"
        android:textColor="#1aad4e"
        android:layout_marginTop="16dp" />

</LinearLayout>



