<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/tv_detail_recipe_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:gravity="center_vertical"/>

            <ImageView
                android:id="@+id/iv_favorite_hearth"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:padding="9dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/baseline_favorite_border_24"
                android:contentDescription="@string/favorite_hearth"
                android:clickable="true"
                android:focusable="true"
                android:background="?attr/selectableItemBackgroundBorderless"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"/>
        <TextView
            android:id="@+id/tv_detail_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/procedure"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"/>
        <TextView
            android:id="@+id/tv_detail_procedure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimated_calories_kcal"
            android:textStyle="bold"
            android:layout_marginBottom="2dp"/>
        <TextView
            android:id="@+id/tv_detail_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>